# python-client

./: .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py  test.py
cayley/: __init__.py  client.py  client_test.py  content_types.py  languages.py
generate/: __main__.py  generate.py  header.py  schema.json  snake_case.py
tests/: test_cayley_python.py
