[tool.poetry]
name = "cayley-python"
version = "0.1.0"
description = ""
authors = ["Iddan Aaronsohn <mail@aniddan.com>"]

[tool.poetry.dependencies]
python = "^3.7"
astor = "^0.8.0"
requests = "^2.22"
rdflib = "^4.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
mypy = "^0.740.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"